[package]
name = "serde_ion"
version = "0.1.0"
authors = ["Peyton Turner <donaldpeytonturner@gmail.com>, Matthew Langhinrichs <mlanghinrichs@gmail.com>"]
edition = "2018"
description = """
A native Rust encoding and decoding library for the Amazon Ion text and binary data formats.
Provides Serialize/Deserialize traits for Ion data to enable (de)serializing to and from Rust structures.
"""
# TODO: Any documentation...
documentation = "https://github.com/PeytonT/serde_ion"
# TODO: Better homepage
homepage = "https://github.com/PeytonT/serde_ion"
repository = "https://github.com/PeytonT/serde_ion"
keywords = ["ion", "serde", "serialization"]
categories = ["encoding", "parser-implementations"]
license = "MIT/Apache-2.0"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "LICENSE", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]
#TODO: Setup codecov
travis-ci = { repository = "PeytonT/serde_ion", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10"
serde_derive = "1.0"
serde_stacker = "0.1"
linked-hash-map = "0.5"
num-bigint = "0.2.2"
chrono = "0.4"
base64 = "0.10.1"
bytes = "0.4.12"
itoa = "0.4.3"
dtoa = "0.4.3"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
