[package]
name = "serde_ion"
version = "0.1.0"
edition = "2018"
description = """
A native Rust encoding and decoding library for the Amazon Ion text and binary data formats.
Currently a work in progress with limited functionality.
"""
# TODO: Any documentation...
documentation = "https://github.com/PeytonT/serde_ion"
# TODO: Better homepage
homepage = "https://github.com/PeytonT/serde_ion"
repository = "https://github.com/PeytonT/serde_ion"
keywords = ["ion", "serde", "serialization"]
categories = ["encoding", "parser-implementations"]
license = "MIT/Apache-2.0"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "LICENSE", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
num-bigint = {version = "0.3.1", features = ["serde"]}
num-traits = "0.2.8"
num-derive = "0.3"
bit-vec = "0.6"
base64 = "0.11"
nom = "6"
thiserror = "1.0.9"
lazy_static = "1.4.0"
itertools = "0.8.2"
log = "0.4.8"
time = "0.2.6"
lexical-core = "0.7.4"
phf = { version = "0.9", features = ["macros"] }

[dev-dependencies]
hex = "0.4.0"
pretty_assertions = "0.6.1"
pretty_env_logger = "0.4.0"

[build-dependencies]

